--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/Cow.png" alt="Cow">
+        <img src="./img/Cow.png" alt="Cow">
         <div>
             <h1>Legendary farm game in your hands</h1>
             <p>Play as a Helga the Cow to protect your animal friends from the Farmer</p>
